# logic-patcher

./: .gitignore  LICENSE  README.md  bootstrap.ps1  bootstrap.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
logic_patcher/: __init__.py  cli.py  core.py  gui.py  utils.py
scripts/: build_deb.sh  build_exe.sh
tests/: test_core.py
